<resources>
    <string name="app_name">chainProject</string>
    <string name="exit">退出</string>
    <string name="black">返回</string>

    <string name="empty">暂无数据</string>
    <string name="home">首页</string>
    <string name="product">信息</string>
    <string name="coordinate">业务</string>
    <string name="me">我</string>
    <string name="foot">正在加载更多…</string>
    <string name="test">测试数据，可点击</string>
    <string name="app_name_hint">手机号/用户名</string>
    <string name="app_password_hint">密码</string>
    <string name="login_button">登 录</string>
    <string name="registration">立即注册</string>
    <string name="forget">忘记密码</string>
    <string name="login_tips" type="id">用户名或密码不能为空</string>
    <string name="test_value">测试值</string>
    <string name="edition">当前版本</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="software_d">软件下载</string>
    <string name="exit_login">退出登录</string>
    <string name="down_tip">扫码下载</string>
    <string name="down_tips">打开手机扫一扫，扫描此二维码，即可下载</string>
    <string name="cd_weekly_sales">本周销售</string>
    <string name="cd_shop_sales">本店销售</string>

    <string name="retail">零售</string>
    <string name="wholesale">批发</string>
    <string name="receiving">收货</string>
    <string name="receiving_type">收货类型</string>
    <string name="receiving_name">收货人</string>
    <string name="return_goods">退货</string>
    <string name="return_goods_detail">退货详情</string>
    <string name="transfer">调拨</string>
    <string name="query">查询</string>
    <string name="bar_code">条码</string>
    <string name="not_null">必填</string>
    <string name="account">现金</string>
    <string name="vip">VIP</string>
    <string name="vip2">VIP积分管理</string>
    <string name="report_form">报表</string>
    <string name="report_monthly">月报</string>
    <string name="service">功能服务</string>
    <string name="me_version">1.0.1</string>
    <string name="update">更新apk</string>
    <string name="ok">确定</string>
    <string name="ok2">确 定</string>
    <string name="cancel">取消</string>
    <string name="exception">避免程序无法使用，请点击允许</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="register_phone">手机号</string>
    <string name="register_code">验证码</string>
    <string name="code">获取验证码</string>
    <string name="register_pws">密码(6–20位数字或字母组合)</string>
    <string name="register">注 册</string>
    <string name="confirm">确认修改</string>
    <string name="cap_info">请将条码置于摄像头前</string>
    <string name="bar_scan">扫描条码</string>
    <string name="bar_qr">生成二维码</string>
    <string name="bar_one">生成条形码</string>
    <string name="bar_tool">条码工具</string>
    <string name="scan">扫一扫</string>
    <string name="qr">二维码</string>
    <string name="one">条形码</string>
    <string name="card_code">条码</string>
    <string name="code_info">条码信息</string>
    <string name="code_number">条码编号</string>
    <string name="code_time">录入时间</string>
    <string name="results_year">年份</string>
    <string name="results_season">季节</string>
    <string name="results_title">款式</string>
    <string name="results_color">颜色</string>
    <string name="results_size">尺码</string>
    <string name="results_component">成分</string>
    <string name="results_origin">产地</string>
    <string name="generate_tips">请输入条码信息</string>
    <string name="generate">生成条码</string>
    <string name="generate_print">打印条码</string>
    <string name="generate_err">请输入有效条码信息</string>
    <string name="text_value">11111111</string>
    <string name="histogram">直方图</string>
    <string name="trend">趋势图</string>

    <string name="test1">¥68</string>
    <string name="test2">老头连锁平台夏季男装短袖T恤高中学生半袖打底衫百搭衣服</string>
    <string name="test3">优惠：7.0</string>
    <string name="test4">月销200</string>
    <string name="test5">湖北武汉</string>
    <string name="test6">¥125</string>
    <string name="test7">参数</string>
    <string name="test8">涤纶材质</string>
    <string name="test9">颜色型号</string>
    <string name="test10">白色，蓝色，L,M</string>

    <string name="unpaired">未配对设备</string>
    <string name="paired">已配对设备</string>
    <string name="blue_name">设备名称</string>
    <string name="bluetooth">蓝牙</string>
    <string name="nonsupport_bluetooth">此设备不支持蓝牙</string>
    <string name="help_proposal">请写下你的意见或建议</string>
    <string name="help_image">上传图片（选填，提供问题截图）</string>
    <string name="submission">提 交</string>
    <string name="branch_name">分店名称</string>
    <string name="please_input">请输入</string>
    <string name="applicant">申请人</string>
    <string name="ct_goods">物品明细</string>
    <string name="ct_update">修改</string>
    <string name="sizeid">尺码ID</string>
    <string name="ct_color">颜色</string>
    <string name="colorid">颜色ID</string>
    <string name="ct_num">总件数：</string>
    <string name="ct_num2">件数</string>
    <string name="ct_num3">次品</string>
    <string name="ct_remarks">备注</string>
    <string name="ct_add_goods">+ 增加物品明细</string>
    <string name="ct_goods_delete">删除</string>
    <string name="contact_number">联系电话</string>
    <string name="goods_details">货物详情</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="return_receipt">确认退货</string>
    <string name="cancel_receipt">取消收货</string>
    <string name="rg_cancel">原因</string>
    <string name="hint_rg_original">请输入取消原因</string>
    <string name="print_number">设置打印个数</string>
    <string name="number1">1</string>
    <string name="commodity_details">商品详情</string>
    <string name="order_details">收货详情</string>
    <string name="receiving_note">收货单</string>
    <string name="query_hint">款号或款名</string>
    <string name="historical_record">历史记录</string>
    <string name="no_data">暂无数据</string>
    <string name="query_title">款号</string>
    <string name="query_name">款名</string>
    <string name="styleName">款名：</string>
    <string name="styleNo">款号：</string>
    <string name="query_stock">库存</string>
    <string name="query_result">查询结果</string>
    <string name="laotou">湖南老头店</string>
    <string name="money">¥</string>
    <string name="discount">折扣：</string>
    <string name="pAmount">预付：</string>
    <string name="pAmount2">预付</string>
    <string name="actAmount">实付：</string>
    <string name="payable">应付：</string>

    <string name="sortid">尺码序号</string>
    <string name="value_0">0</string>
    <string name="retail_scan">点击扫描\n商品条码</string>
    <string name="retail_search">点击查询\n商品内容</string>
    <string name="retail_confirm">确认订单</string>
    <string name="retail_receivable">应收总金额：</string>
    <string name="retail_received">实收总金额：</string>
    <string name="price">价格</string>
    <string name="no_style">本店无此款</string>
    <string name="no_style2">暂无库存</string>
    <string name="POS_tips">请扫描需要提交的订单</string>
    <string name="history">零售历史</string>
    <string name="retail_history">点击查询\n历史订单</string>
    <string name="currency">币种：</string>
    <string name="details">零售订单详情</string>
    <string name="order_number">订单号：</string>
    <string name="retreat">退单</string>
    <string name="retreat_2">已退单</string>
    <string name="report_inventory">盘点</string>
    <string name="Inventory_date">盘点日期</string>
    <string name="date">当前日期</string>
    <string name="inventory_statistics">统计</string>
    <string name="inventory_hide">点击选择时间</string>
    <string name="firm_offer">实盘(件)</string>
    <string name="inventory_account">账面(件)</string>
    <string name="inventory_price">金额</string>
    <string name="inventory_profit">盈亏</string>
    <string name="successful_submission">提交成功</string>
    <string name="early_stage">期初</string>
    <string name="current_income">本期收入</string>
    <string name="current_sell">本期销售</string>
    <string name="end_cash">期末结存</string>
    <string name="batch">批次</string>
    <string name="historical_data">历史数据</string>
    <string name="historical2_data">历史</string>
    <string name="export">导出</string>
    <string name="create_historical">月报日期</string>
    <string name="odd_numbers">单号</string>
    <string name="month">月份</string>
    <string name="operator">操作员</string>
    <string name="add">新增</string>
    <string name="del">删除</string>
    <string name="bank_name">项目名称</string>
    <string name="bank_amount">支出金额</string>
    <string name="bank_balance">余额</string>
    <string name="bank_data">支出日期</string>
    <string name="bank_operator">操作员</string>
    <string name="bank_remark">备注</string>
    <string name="successful_revision">修改成功</string>
    <string name="vip_register">注册新用户</string>
    <string name="vip_name">顾客姓名</string>
    <string name="vip_card_type">卡别</string>
    <string name="vip_integral">积分</string>
    <string name="vip_balance">储值余额</string>
    <string name="vip_store">门店</string>
    <string name="vip_store2">门店：</string>
    <string name="vip_date">注册日期</string>
    <string name="vip_optional">选填</string>
    <string name="vip_phone">手机号码</string>
    <string name="vip_card">卡片类别</string>
    <string name="vip_money">储值金额</string>
    <string name="vip_empty">数据不能为空</string>
    <string name="name_null">收货人不能为空</string>
    <string name="transshipment_type">类别：</string>
    <string name="transshipment_type2">类别</string>
    <string name="transshipment">调拨单</string>
    <string name="transshipment_add">新增调拨</string>
    <string name="transshipment_deliver">交期：</string>
    <string name="transshipment_deliver2">交期</string>
    <string name="transshipment_remark">备注：</string>
    <string name="season">季节</string>
    <string name="brand">品牌</string>
    <string name="transshipment_detail">调拨选择</string>
    <string name="transshipment_detail_price">单价</string>
    <string name="sources">产地</string>
    <string name="unit">单位</string>
    <string name="input_date">录入日期</string>
    <string name="add_return">新增退货</string>
    <string name="return_info">请检查是否已经修改完成</string>
</resources>
