<?xml version="1.0" encoding="utf-8"?>

<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_40"
                      android:orientation="horizontal"
                      android:background="@color/bg_title_bar">
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="3"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_14"
                      android:gravity="center"
                      android:text="@string/odd_numbers"/>
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_14"
                      android:gravity="center"
                      android:text="@string/results_year"/>
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_14"
                      android:gravity="center"
                      android:text="@string/month"/>
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="2"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_14"
                      android:gravity="center"
                      android:text="@string/create_historical"/>
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_14"
                      android:gravity="center"
                      android:text="@string/operator"/>

        </LinearLayout>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:overScrollMode="never"
                android:id="@+id/history_rv"/>
    </LinearLayout>
</layout>