<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:layout_height="match_parent">
        <TextView android:layout_width="match_parent" android:layout_height="@dimen/dp_60"
                  android:textSize="@dimen/sp_18"
                  android:textColor="@color/black"
                  android:gravity="center"
                  android:text="@string/down_tip"/>
        <ImageView
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="@dimen/dp_240" android:layout_height="@dimen/dp_240"
                   android:id="@+id/down_QR"
                   android:contentDescription="@string/app_name"
                   android:src="@mipmap/qr"/>
        <TextView android:layout_width="match_parent" android:layout_height="@dimen/dp_60"
                  android:textSize="@dimen/sp_14"
                  android:textColor="@color/black"
                  android:gravity="center"
                  android:text="@string/down_tips"/>
    </LinearLayout>
</layout>
