<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/dp_50"
                   android:layout_gravity="center"
                   android:contentDescription="@string/app_name"
                   android:id="@+id/generate_image"/>
        <TextView android:layout_width="match_parent" android:layout_height="@dimen/dp_40"
                  android:gravity="center"
                  android:textSize="@dimen/sp_14"
                  android:textColor="@color/black"
                  android:id="@+id/generate_info"/>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_60"
                                                       android:layout_marginStart="@dimen/dp_30"
                                                       android:layout_marginTop="@dimen/dp_30"
                                                       android:layout_marginEnd="@dimen/dp_30">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:id="@+id/generate_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/generate_tips"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_40"
                      android:orientation="horizontal"
                      android:layout_marginTop="@dimen/dp_20">
            <EditText android:layout_width="@dimen/dp_80" android:layout_height="@dimen/dp_35"
                      android:background="@drawable/background_box"
                      android:id="@+id/code_number"
                      android:layout_marginStart="@dimen/dp_30"
                      android:enabled="false"
                      android:gravity="center"
                      android:inputType="number"
                      android:text="@string/number1"/>
            <TextView android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_40"
                    android:id="@+id/setting_number"
                    android:textColor="@color/white"
                      android:gravity="center"
                    android:background="@drawable/background_select_bt"
                    android:layout_marginStart="@dimen/dp_30"
                    android:text="@string/print_number"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_60"
                      android:orientation="horizontal"
                      android:layout_marginStart="@dimen/dp_30"
                      android:layout_marginTop="@dimen/dp_20"
                      android:layout_marginEnd="@dimen/dp_30">
            <TextView android:layout_width="@dimen/dp_100" android:layout_height="match_parent"
                      android:textColor="@color/bg_title_bar"
                      android:textSize="@dimen/sp_18"
                      android:id="@+id/generate"
                      android:gravity="center"
                      android:text="@string/generate"/>
            <TextView android:layout_width="100dp" android:layout_height="match_parent"
                      android:textColor="@color/bg_title_bar"
                      android:textSize="@dimen/sp_18"
                      android:id="@+id/generate_print"
                      android:layout_gravity="end"
                      android:gravity="center"
                      android:layout_alignParentEnd="true"
                      android:text="@string/generate_print"/>
        </RelativeLayout>

    </LinearLayout>
</layout>